--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         
       <div class="container">
         <div>
-            <img class="logo" src="Images/ip3.gif" alt="Indiapress Logo">
+            <img class="logo" src="./images/ip3.gif" alt="Indiapress Logo">
         </div>
         <div class="content">
           <header>
